Add some dependencies.

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -2,5 +2,10 @@ channels:
     - conda-forge
 dependencies:
     - appmode
+    - ipywidgets
+    - matplotlib
+    - numpy
+    - pandas
+    - scipy
     - pip:
         - nnfigs
