Update the binder setup.

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -2,10 +2,12 @@ channels:
     - conda-forge
 dependencies:
     - appmode
-    - ipywidgets
     - matplotlib
     - numpy
     - pandas
     - scipy
     - pip:
         - nnfigs
+        - jupyterlab==3
+        - ipywidgets
+        - ipympl
